Get interface information

--- a/pdsscanner/Makefile
+++ b/pdsscanner/Makefile
@@ -1,5 +1,4 @@
 CXXFLAGS =	-O2 -g -Wall -fmessage-length=0
-
 SRC = 		$(wildcard *.cpp)
 OBJS =		$(wildcard *.o)
 LIBS =		scanner.h 
@@ -7,9 +6,11 @@ TARGET =	pds_scanner
 
 
 $(TARGET):	$(SRC)
-	$(CXX) -o $(TARGET) $(SRC)
+	$(CXX) -o $(TARGET) $(SRC) $(CXXFLAGS)
 
 all:	$(TARGET)
 
+debug: $(SRC)
+	$(CXX) -o $(TARGET) $(SRC) $(CXXFLAGS) -DDEBUG
 clean:
 	rm -f $(OBJS) $(TARGET)
