--- a/pdsscanner/Makefile
+++ b/pdsscanner/Makefile
@@ -1,4 +1,4 @@
-CXXFLAGS =	-O0 -g -Wall -fmessage-length=0 -pthread -std=c++11
+CXXFLAGS =	-O0 -g -Wall -fmessage-length=0 -pthread -std=c++11 -I/usr/include/libxml2/
 SRC = 		$(wildcard *.cpp)
 OBJS =		$(wildcard *.o)
 LIBS =		scanner.h 
@@ -6,11 +6,11 @@ TARGET =	pds_scanner
 
 
 $(TARGET):	$(SRC)
-	$(CXX) -o $(TARGET) $(SRC) $(CXXFLAGS)
+	$(CXX) -o $(TARGET) $(SRC) $(CXXFLAGS) -lxml2
 
 all:	$(TARGET)
 
 debug: $(SRC)
-	$(CXX) -o $(TARGET) $(SRC) $(CXXFLAGS) -DDEBUG
+	$(CXX) -o $(TARGET) $(SRC) $(CXXFLAGS) -lxml2 -DDEBUG
 clean:
 	rm -f $(OBJS) $(TARGET)
